Forced to make tool button bar visible at all times due to subtle bug (possibly in chrome?) that prevents click events if the visibility changes as desired. This makes plotting work; however, there remains a mystery that must be discovered. Not sure if this is browser dependent or not; whant to speak to DEJ about it.

--- a/server/public/stylesheets/notebook.styl
+++ b/server/public/stylesheets/notebook.styl
@@ -159,7 +159,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 .tools
   width 80px
-  visibility hidden
+  visibility visible // visibility hidden --- there is a subtle bug here preventing event bubbling when visibility changes - rlr
 
 @media (hover: hover) {
   .thought:hover .tools { visibility: visible }
